--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.21.0/phaser-arcade-physics.js"></script>
     <title>Snake - Javascript</title>
 </head>
 <body>
     <h1>Single player</h1>
+    <div id="phaser-game"></div>
+    <script type="module" src="js/singlephase.js"></script>
 </body>
 </html>
